--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://github.com/jomy10/type-pools"
 repository = "https://github.com/jomy10/type-pools"
 keywords = ["data structures", "data structure", "types", "type erase", "box"]
 categories = ["data-structures"]
+license = "MIT"
 
 [dependencies]
 
