--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Jonas Everaert"]
 description = "A data structure to store values of multiple types"
 homepage = "https://github.com/jomy10/type-pools"
 repository = "https://github.com/jomy10/type-pools"
-keywords = ["data structures", "data structure", "types", "type erase", "box"]
+keywords = ["data-structures", "data-structure", "types", "type-erase", "box"]
 categories = ["data-structures"]
 license = "MIT"
 
